[package]
name = "nft-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_staking"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.0"
anchor-spl = "0.18.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
metaplex-token-metadata = {  version = "0.0.1", features = ["no-entrypoint"] }
